cmake_minimum_required(VERSION 3.14)
project(project8)

set(CMAKE_CXX_STANDARD 11)

add_executable(project8 main.cpp test2.cpp reconstructMatrix.cpp subtractProductAndSum.cpp groupThePeople.cpp getDecimalValue.cpp sequentialDigits.cpp maxSideLength.cpp findNumbers.cpp isPossibleDivide.cpp freqAlphabets.cpp xorQueries.cpp watchedVideosByFriends.cpp sortList.cpp evalRPN.cpp reverseWords.cpp findMin.cpp compareVersion.cpp fractionToDecimal.cpp BSTIterator.cpp sumNumbers.cpp)
add_executable(project8test test.cpp)
add_executable(test2 test2.cpp)
add_executable(reconstructMatrix reconstructMatrix.cpp)
add_executable(subtractProductAndSum subtractProductAndSum.cpp)
add_executable(groupThePeople groupThePeople.cpp)
add_executable(getDecimalValue getDecimalValue.cpp)
add_executable(sequentialDigits sequentialDigits.cpp)
add_executable(maxSideLength maxSideLength.cpp)
add_executable(findNumbers findNumbers.cpp)
add_executable(isPossibleDivide isPossibleDivide.cpp)
add_executable(freqAlphabets freqAlphabets.cpp)
add_executable(xorQueries xorQueries.cpp)
add_executable(watchedVideosByFriends watchedVideosByFriends.cpp)
add_executable(sortList sortList.cpp)
add_executable(evalRPN evalRPN.cpp)
add_executable(reverseWords reverseWords.cpp)
add_executable(findMin findMin.cpp)
add_executable(compareVersion compareVersion.cpp)
add_executable(fractionToDecimal fractionToDecimal.cpp)
add_executable(BSTIterator BSTIterator.cpp)
add_executable(sumNumbers sumNumbers.cpp)
